build/parser.output
Terminals unused in grammar

    ERRO


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier ID SEMICOLON
    7                | type_specifier error SEMICOLON
    8                | type_specifier ID ABRECOLCHETES NUM FECHACOLCHETES SEMICOLON
    9                | type_specifier error FECHACOLCHETES SEMICOLON

   10 type_specifier: INT
   11               | VOID

   12 fun_declaration: type_specifier fun_id ABREPARENTESES params FECHAPARENTESES compound_decl

   13 fun_id: ID

   14 params: param_list
   15       | VOID

   16 param_list: param_list COMMA param
   17           | param

   18 param: type_specifier ID
   19      | type_specifier ID ABRECOLCHETES FECHACOLCHETES

   20 compound_decl: ABRECHAVES local_declarations statement_list FECHACHAVES

   21 local_declarations: local_declarations var_declaration
   22                   | ε

   23 statement_list: statement_list statement
   24               | ε

   25 statement: expression_decl
   26          | compound_decl
   27          | selection_decl
   28          | iteration_decl
   29          | return_decl

   30 expression_decl: expression SEMICOLON
   31                | SEMICOLON
   32                | error SEMICOLON

   33 selection_decl: IF ABREPARENTESES expression FECHAPARENTESES statement
   34               | IF ABREPARENTESES expression FECHAPARENTESES statement ELSE statement

   35 iteration_decl: WHILE ABREPARENTESES expression FECHAPARENTESES statement

   36 return_decl: RETURN SEMICOLON
   37            | RETURN expression SEMICOLON

   38 expression: var ATRIB expression
   39           | simple_expression

   40 var: ID
   41    | ID ABRECOLCHETES expression FECHACOLCHETES

   42 simple_expression: simple_expression relational sum_expression
   43                  | sum_expression

   44 relational: relational_operand

   45 relational_operand: EQ
   46                   | NEQ
   47                   | LT
   48                   | GT
   49                   | LET
   50                   | GET

   51 sum_expression: sum_expression sum term
   52               | term

   53 sum: SOMA
   54    | SUB

   55 term: term mult factor
   56     | factor

   57 mult: MULT
   58     | DIV

   59 factor: ABREPARENTESES expression FECHAPARENTESES
   60       | var
   61       | activation
   62       | NUM

   63 activation: fun_id ABREPARENTESES args FECHAPARENTESES

   64 args: arg_list
   65     | ε

   66 arg_list: arg_list COMMA expression
   67         | expression


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 9 32
    NUM (258) 8 62
    ID (259) 6 8 13 18 19 40 41
    ABREPARENTESES (260) 12 33 34 35 59 63
    FECHAPARENTESES (261) 12 33 34 35 59 63
    ABRECOLCHETES (262) 8 19 41
    FECHACOLCHETES (263) 8 9 19 41
    ABRECHAVES (264) 20
    FECHACHAVES (265) 20
    ATRIB (266) 38
    COMMA (267) 16 66
    SEMICOLON (268) 6 7 8 9 30 31 32 36 37
    SOMA (269) 53
    SUB (270) 54
    MULT (271) 57
    DIV (272) 58
    EQ (273) 45
    NEQ (274) 46
    LT (275) 47
    GT (276) 48
    LET (277) 49
    GET (278) 50
    INT (279) 10
    VOID (280) 11 15
    WHILE (281) 35
    ELSE (282) 34
    IF (283) 33 34
    RETURN (284) 36 37
    ERRO (285)
    IFX (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1
        on right: 0
    declaration_list (34)
        on left: 2 3
        on right: 1 2
    declaration (35)
        on left: 4 5
        on right: 2 3
    var_declaration (36)
        on left: 6 7 8 9
        on right: 4 21
    type_specifier (37)
        on left: 10 11
        on right: 6 7 8 9 12 18 19
    fun_declaration (38)
        on left: 12
        on right: 5
    fun_id (39)
        on left: 13
        on right: 12 63
    params (40)
        on left: 14 15
        on right: 12
    param_list (41)
        on left: 16 17
        on right: 14 16
    param (42)
        on left: 18 19
        on right: 16 17
    compound_decl (43)
        on left: 20
        on right: 12 26
    local_declarations (44)
        on left: 21 22
        on right: 20 21
    statement_list (45)
        on left: 23 24
        on right: 20 23
    statement (46)
        on left: 25 26 27 28 29
        on right: 23 33 34 35
    expression_decl (47)
        on left: 30 31 32
        on right: 25
    selection_decl (48)
        on left: 33 34
        on right: 27
    iteration_decl (49)
        on left: 35
        on right: 28
    return_decl (50)
        on left: 36 37
        on right: 29
    expression (51)
        on left: 38 39
        on right: 30 33 34 35 37 38 41 59 66 67
    var (52)
        on left: 40 41
        on right: 38 60
    simple_expression (53)
        on left: 42 43
        on right: 39 42
    relational (54)
        on left: 44
        on right: 42
    relational_operand (55)
        on left: 45 46 47 48 49 50
        on right: 44
    sum_expression (56)
        on left: 51 52
        on right: 42 43 51
    sum (57)
        on left: 53 54
        on right: 51
    term (58)
        on left: 55 56
        on right: 51 52 55
    mult (59)
        on left: 57 58
        on right: 55
    factor (60)
        on left: 59 60 61 62
        on right: 55 56
    activation (61)
        on left: 63
        on right: 61
    args (62)
        on left: 64 65
        on right: 63
    arg_list (63)
        on left: 66 67
        on right: 64 66


State 0

    0 $accept: • program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 1

   10 type_specifier: INT •

    $default  reduce using rule 10 (type_specifier)


State 2

   11 type_specifier: VOID •

    $default  reduce using rule 11 (type_specifier)


State 3

    0 $accept: program • $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list •
    2 declaration_list: declaration_list • declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration •

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration •

    $default  reduce using rule 4 (declaration)


State 7

    6 var_declaration: type_specifier • ID SEMICOLON
    7                | type_specifier • error SEMICOLON
    8                | type_specifier • ID ABRECOLCHETES NUM FECHACOLCHETES SEMICOLON
    9                | type_specifier • error FECHACOLCHETES SEMICOLON
   12 fun_declaration: type_specifier • fun_id ABREPARENTESES params FECHAPARENTESES compound_decl

    error  shift, and go to state 11
    ID     shift, and go to state 12

    fun_id  go to state 13


State 8

    5 declaration: fun_declaration •

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end •

    $default  accept


State 10

    2 declaration_list: declaration_list declaration •

    $default  reduce using rule 2 (declaration_list)


State 11

    7 var_declaration: type_specifier error • SEMICOLON
    9                | type_specifier error • FECHACOLCHETES SEMICOLON

    FECHACOLCHETES  shift, and go to state 14
    SEMICOLON       shift, and go to state 15


State 12

    6 var_declaration: type_specifier ID • SEMICOLON
    8                | type_specifier ID • ABRECOLCHETES NUM FECHACOLCHETES SEMICOLON
   13 fun_id: ID •

    ABRECOLCHETES  shift, and go to state 16
    SEMICOLON      shift, and go to state 17

    $default  reduce using rule 13 (fun_id)


State 13

   12 fun_declaration: type_specifier fun_id • ABREPARENTESES params FECHAPARENTESES compound_decl

    ABREPARENTESES  shift, and go to state 18


State 14

    9 var_declaration: type_specifier error FECHACOLCHETES • SEMICOLON

    SEMICOLON  shift, and go to state 19


State 15

    7 var_declaration: type_specifier error SEMICOLON •

    $default  reduce using rule 7 (var_declaration)


State 16

    8 var_declaration: type_specifier ID ABRECOLCHETES • NUM FECHACOLCHETES SEMICOLON

    NUM  shift, and go to state 20


State 17

    6 var_declaration: type_specifier ID SEMICOLON •

    $default  reduce using rule 6 (var_declaration)


State 18

   12 fun_declaration: type_specifier fun_id ABREPARENTESES • params FECHAPARENTESES compound_decl

    INT   shift, and go to state 1
    VOID  shift, and go to state 21

    type_specifier  go to state 22
    params          go to state 23
    param_list      go to state 24
    param           go to state 25


State 19

    9 var_declaration: type_specifier error FECHACOLCHETES SEMICOLON •

    $default  reduce using rule 9 (var_declaration)


State 20

    8 var_declaration: type_specifier ID ABRECOLCHETES NUM • FECHACOLCHETES SEMICOLON

    FECHACOLCHETES  shift, and go to state 26


State 21

   11 type_specifier: VOID •
   15 params: VOID •

    FECHAPARENTESES  reduce using rule 15 (params)
    $default         reduce using rule 11 (type_specifier)


State 22

   18 param: type_specifier • ID
   19      | type_specifier • ID ABRECOLCHETES FECHACOLCHETES

    ID  shift, and go to state 27


State 23

   12 fun_declaration: type_specifier fun_id ABREPARENTESES params • FECHAPARENTESES compound_decl

    FECHAPARENTESES  shift, and go to state 28


State 24

   14 params: param_list •
   16 param_list: param_list • COMMA param

    COMMA  shift, and go to state 29

    $default  reduce using rule 14 (params)


State 25

   17 param_list: param •

    $default  reduce using rule 17 (param_list)


State 26

    8 var_declaration: type_specifier ID ABRECOLCHETES NUM FECHACOLCHETES • SEMICOLON

    SEMICOLON  shift, and go to state 30


State 27

   18 param: type_specifier ID •
   19      | type_specifier ID • ABRECOLCHETES FECHACOLCHETES

    ABRECOLCHETES  shift, and go to state 31

    $default  reduce using rule 18 (param)


State 28

   12 fun_declaration: type_specifier fun_id ABREPARENTESES params FECHAPARENTESES • compound_decl

    ABRECHAVES  shift, and go to state 32

    compound_decl  go to state 33


State 29

   16 param_list: param_list COMMA • param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 22
    param           go to state 34


State 30

    8 var_declaration: type_specifier ID ABRECOLCHETES NUM FECHACOLCHETES SEMICOLON •

    $default  reduce using rule 8 (var_declaration)


State 31

   19 param: type_specifier ID ABRECOLCHETES • FECHACOLCHETES

    FECHACOLCHETES  shift, and go to state 35


State 32

   20 compound_decl: ABRECHAVES • local_declarations statement_list FECHACHAVES

    $default  reduce using rule 22 (local_declarations)

    local_declarations  go to state 36


State 33

   12 fun_declaration: type_specifier fun_id ABREPARENTESES params FECHAPARENTESES compound_decl •

    $default  reduce using rule 12 (fun_declaration)


State 34

   16 param_list: param_list COMMA param •

    $default  reduce using rule 16 (param_list)


State 35

   19 param: type_specifier ID ABRECOLCHETES FECHACOLCHETES •

    $default  reduce using rule 19 (param)


State 36

   20 compound_decl: ABRECHAVES local_declarations • statement_list FECHACHAVES
   21 local_declarations: local_declarations • var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 24 (statement_list)

    var_declaration  go to state 37
    type_specifier   go to state 38
    statement_list   go to state 39


State 37

   21 local_declarations: local_declarations var_declaration •

    $default  reduce using rule 21 (local_declarations)


State 38

    6 var_declaration: type_specifier • ID SEMICOLON
    7                | type_specifier • error SEMICOLON
    8                | type_specifier • ID ABRECOLCHETES NUM FECHACOLCHETES SEMICOLON
    9                | type_specifier • error FECHACOLCHETES SEMICOLON

    error  shift, and go to state 11
    ID     shift, and go to state 40


State 39

   20 compound_decl: ABRECHAVES local_declarations statement_list • FECHACHAVES
   23 statement_list: statement_list • statement

    error           shift, and go to state 41
    NUM             shift, and go to state 42
    ID              shift, and go to state 43
    ABREPARENTESES  shift, and go to state 44
    ABRECHAVES      shift, and go to state 32
    FECHACHAVES     shift, and go to state 45
    SEMICOLON       shift, and go to state 46
    WHILE           shift, and go to state 47
    IF              shift, and go to state 48
    RETURN          shift, and go to state 49

    fun_id             go to state 50
    compound_decl      go to state 51
    statement          go to state 52
    expression_decl    go to state 53
    selection_decl     go to state 54
    iteration_decl     go to state 55
    return_decl        go to state 56
    expression         go to state 57
    var                go to state 58
    simple_expression  go to state 59
    sum_expression     go to state 60
    term               go to state 61
    factor             go to state 62
    activation         go to state 63


State 40

    6 var_declaration: type_specifier ID • SEMICOLON
    8                | type_specifier ID • ABRECOLCHETES NUM FECHACOLCHETES SEMICOLON

    ABRECOLCHETES  shift, and go to state 16
    SEMICOLON      shift, and go to state 17


State 41

   32 expression_decl: error • SEMICOLON

    SEMICOLON  shift, and go to state 64


State 42

   62 factor: NUM •

    $default  reduce using rule 62 (factor)


State 43

   13 fun_id: ID •
   40 var: ID •
   41    | ID • ABRECOLCHETES expression FECHACOLCHETES

    ABRECOLCHETES  shift, and go to state 65

    ABREPARENTESES  reduce using rule 13 (fun_id)
    $default        reduce using rule 40 (var)


State 44

   59 factor: ABREPARENTESES • expression FECHAPARENTESES

    NUM             shift, and go to state 42
    ID              shift, and go to state 43
    ABREPARENTESES  shift, and go to state 44

    fun_id             go to state 50
    expression         go to state 66
    var                go to state 58
    simple_expression  go to state 59
    sum_expression     go to state 60
    term               go to state 61
    factor             go to state 62
    activation         go to state 63


State 45

   20 compound_decl: ABRECHAVES local_declarations statement_list FECHACHAVES •

    $default  reduce using rule 20 (compound_decl)


State 46

   31 expression_decl: SEMICOLON •

    $default  reduce using rule 31 (expression_decl)


State 47

   35 iteration_decl: WHILE • ABREPARENTESES expression FECHAPARENTESES statement

    ABREPARENTESES  shift, and go to state 67


State 48

   33 selection_decl: IF • ABREPARENTESES expression FECHAPARENTESES statement
   34               | IF • ABREPARENTESES expression FECHAPARENTESES statement ELSE statement

    ABREPARENTESES  shift, and go to state 68


State 49

   36 return_decl: RETURN • SEMICOLON
   37            | RETURN • expression SEMICOLON

    NUM             shift, and go to state 42
    ID              shift, and go to state 43
    ABREPARENTESES  shift, and go to state 44
    SEMICOLON       shift, and go to state 69

    fun_id             go to state 50
    expression         go to state 70
    var                go to state 58
    simple_expression  go to state 59
    sum_expression     go to state 60
    term               go to state 61
    factor             go to state 62
    activation         go to state 63


State 50

   63 activation: fun_id • ABREPARENTESES args FECHAPARENTESES

    ABREPARENTESES  shift, and go to state 71


State 51

   26 statement: compound_decl •

    $default  reduce using rule 26 (statement)


State 52

   23 statement_list: statement_list statement •

    $default  reduce using rule 23 (statement_list)


State 53

   25 statement: expression_decl •

    $default  reduce using rule 25 (statement)


State 54

   27 statement: selection_decl •

    $default  reduce using rule 27 (statement)


State 55

   28 statement: iteration_decl •

    $default  reduce using rule 28 (statement)


State 56

   29 statement: return_decl •

    $default  reduce using rule 29 (statement)


State 57

   30 expression_decl: expression • SEMICOLON

    SEMICOLON  shift, and go to state 72


State 58

   38 expression: var • ATRIB expression
   60 factor: var •

    ATRIB  shift, and go to state 73

    $default  reduce using rule 60 (factor)


State 59

   39 expression: simple_expression •
   42 simple_expression: simple_expression • relational sum_expression

    EQ   shift, and go to state 74
    NEQ  shift, and go to state 75
    LT   shift, and go to state 76
    GT   shift, and go to state 77
    LET  shift, and go to state 78
    GET  shift, and go to state 79

    $default  reduce using rule 39 (expression)

    relational          go to state 80
    relational_operand  go to state 81


State 60

   43 simple_expression: sum_expression •
   51 sum_expression: sum_expression • sum term

    SOMA  shift, and go to state 82
    SUB   shift, and go to state 83

    $default  reduce using rule 43 (simple_expression)

    sum  go to state 84


State 61

   52 sum_expression: term •
   55 term: term • mult factor

    MULT  shift, and go to state 85
    DIV   shift, and go to state 86

    $default  reduce using rule 52 (sum_expression)

    mult  go to state 87


State 62

   56 term: factor •

    $default  reduce using rule 56 (term)


State 63

   61 factor: activation •

    $default  reduce using rule 61 (factor)


State 64

   32 expression_decl: error SEMICOLON •

    $default  reduce using rule 32 (expression_decl)


State 65

   41 var: ID ABRECOLCHETES • expression FECHACOLCHETES

    NUM             shift, and go to state 42
    ID              shift, and go to state 43
    ABREPARENTESES  shift, and go to state 44

    fun_id             go to state 50
    expression         go to state 88
    var                go to state 58
    simple_expression  go to state 59
    sum_expression     go to state 60
    term               go to state 61
    factor             go to state 62
    activation         go to state 63


State 66

   59 factor: ABREPARENTESES expression • FECHAPARENTESES

    FECHAPARENTESES  shift, and go to state 89


State 67
